@@ -57,6 +57,8 @@ Additions and changes:
 - all required resources used now the default autoloader
 - allow to run either a stand-alone or pear installed version
 - Reports refactoring (33 percent code reduced)
+- Source, Database and Reference reports
+will not be print anymore on standard output when --report-file option used
 
 Bug fixes:
 - PHP 5.4 raises notice error (Array to string conversion) in file cache, while PHP 5.2 and 5.3 did not
